resource/front-envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: ADMIN_PORT
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: LISTENER_PORT
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cidrpool
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: cidrpool
    connect_timeout: UPSTREAM_CONNECT_TIMEOUT
    type: static
    lb_policy: UPSTREAM_LB_POLICY
